# lm_act_eval

./: .example.env  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.dev.md  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: pypi.yaml  test-pypi.yaml
config/: .conf.example  base.yaml  debug.yaml  opentable_trajectory.yaml  trajectory_eval-experiment.yaml  trajectory_eval-test.yaml  trajectory_eval.yaml
config/comparator/: default.yaml
config/metrics/: trajectory.yaml
config/opentable/: default.yaml  dev.yaml  experiment.yaml
config/opentable/sft/: compare.yaml  default-data_aug.yaml  default-opentable.yaml  default.yaml
config/opentable/trajectory/: comparator.yaml  dataset.yaml  default.yaml  metrics.yaml
config/webarena_rl/: init_browser_conf.example.yaml  init_browser_conf.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
lm_act_eval/: .conf.example  __init__.py  __main__.py  _init_conf.py  cli.py  log_configs.py
lm_act_eval/common/: hf.py  utils.py
lm_act_eval/common/data/: README.md  augmentations.py  googlemaps.py  utils.py
lm_act_eval/config/: base.yaml  offline.yaml
lm_act_eval/evaluation_harness/: README.md  __init__.py  constants.py  handlers.py  image_utils.py  registry.py
lm_act_eval/metrics/: __init__.py  actions.py  trajectories.py
lm_act_eval/ontology/: agent.py  base.py  config.py  inputs.py  logger.py  metrics.py
quickstart/: Data Validation - table.ipynb  Data Validation - trajectory table.ipynb  GPT-vision benchmark.ipynb  Trajectory Generation - HF.ipynb  Trajectory Generation - HF.py  Trajectory Validation - HF.ipynb  Trajectory Validation - data augmentation.ipynb  Trajectory Validation - data processing & GPTV eval.ipynb  Trajectory Validation - data processing & GPTV.ipynb  Trajectory Validation - external.ipynb  Trajectory Validation - opentable_html.ipynb  run_notebook.sh
scripts/: deepspeed.py  inference.py  portkey_query.py
scripts/asset/: query.resp.md  query.txt
tests/: __init__.py  conftest.py  constants.py  test_gptv_evaluator.py  test_handlers.py  test_lm_act_eval.py  test_logger_router.py  test_opentable_html.py
wandb/: latest-run
(+75 files in other folders)
